--- a/scss/_btn.scss
+++ b/scss/_btn.scss
@@ -1,20 +1,24 @@
-%btn {
-    display: inline-block;
-    border-radius: 5px;
-    padding: 8px 20px;
-    margin: 3px;
 
-    &:hover {
-        transform: scale(.98);
-    }
+
+.btn {
+    display: inline-block;
+    background-color: $light-color;
+    color: #333;
+    padding: 0.4rem 1rem;
+    border: none;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-right: 0.5rem;
+    outline: none;
+    transition: all 0.2s ease-in;
+    font-size: 12px;
+    margin: 5px 0px;
+    
 }
 
-// .btn-primary {
-//     @extend %btn;
-//     @include set-background(lighten($dark-blue-color, 10%))
-// }
-
-// .btn-secondary {
-//     @extend %btn;
-//     @include set-background($light-blue-color)
-// }
+.btn-primary {
+    @include set-background($dark-blue-color);
+    &:hover{
+        background: lighten($dark-blue-color, 5%)
+    }
+}
