--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-@import 'btn';
 @import 'color';
 @import 'nav';
 @import 'hero-img';
 @import 'section-a';
 @import 'section-b';
+@import 'btn';
 
 // _style.scss
 * {
@@ -15,6 +15,7 @@
   }
   
   body {
+    @include set-background($light-color);
     font-family: $font-stack;
     line-height: 1.6;
   }
@@ -24,5 +25,8 @@
   .container {
     max-width: 1200px;
     margin: auto;
+  }
+  a {
+    text-decoration: none;
   }
  
