--- a/scss/_section-a.scss
+++ b/scss/_section-a.scss
@@ -1,26 +1,26 @@
 
 .section-a {
-    padding-top: 60px;
+    padding-top: 40px;
     padding-bottom: 30px;
+    @include set-background($light-color);
+  
+    .section-a-container{
+    max-width: 1200px;
+    margin: auto;
     display: grid;
-    grid-template-columns: 1fr  1fr;
-  
-    
-    .section-a-box{
-    display: flex;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     justify-content: center;
-    grid-column:1/3; 
-    gap: 70px;
-    padding: 20px;
+    gap: 20px;
+    padding: 20px 20px;
     }
- 
-    .section-a-about-paragraph{
-    width: 50%;
-    }
-    .section-a-about-img {
-    width:50%;
-    }
- 
-  
-
 }
+
+@media (max-width: 700px) {
+  
+    .section-a .section-a-container {
+    grid-template-columns: 1fr ;
+    justify-content: space-around;
+     
+    }
+ 
+ }
