--- a/scss/_section-d.scss
+++ b/scss/_section-d.scss
@@ -1,20 +1,14 @@
 .section-d {
     @include set-background(#fff);
-    padding: 40px 0;
+    padding: 40px 20px;
 
-
-   .section-d-container {
-    max-width: 1200px;
-    margin: auto;
-    padding: 20px 20px;
-   }
+    .h1-div {
+      max-width: 1200px;
+      margin: auto;
+    }
    
-   .news {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+   .section-container {
     gap: 20px;
-    justify-content: space-around;
-    padding: 20px 20px;
     margin-top: 10px;
     margin-bottom: 20px;
     border: 1px dotted rgb(180, 178, 178);
@@ -22,13 +16,3 @@
    }
 }
 
-
-@media (max-width: 700px) {
-  
-   .section-d-container .news {
-    grid-template-columns: 1fr ;
-    justify-content: space-around;
-    
-   }
-
-}
