--- a/scss/_section-a.scss
+++ b/scss/_section-a.scss
@@ -1,26 +1,12 @@
 
 .section-a {
+
     padding-top: 40px;
     padding-bottom: 30px;
     @include set-background($light-color);
-  
-    .section-a-container{
-    max-width: 1200px;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    justify-content: center;
-    gap: 20px;
-    padding: 20px 20px;
+    
+    .section-container{
+    gap: 50px;
     }
 }
 
-@media (max-width: 700px) {
-  
-    .section-a .section-a-container {
-    grid-template-columns: 1fr ;
-    justify-content: space-around;
-     
-    }
- 
- }
