--- a/scss/_section-c.scss
+++ b/scss/_section-c.scss
@@ -3,38 +3,20 @@
     @include set-background($light-blue-color);
 
        
-.section-c-container{
-        max-width: 1200px;
-        margin: auto;
-        display: grid;
+.section-container{
         grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-        justify-content: center;
-        align-items: center;
-        padding: 30px 20px;
+        }
 
-         .logo-display {
-        padding-top: 20px;
-        width: 40%;
-        justify-self:center; 
-        }
-        }
+        .logo-display {
+                padding-top: 20px;
+                width: 40%;
+                justify-self:center; 
+                }
          p {
         text-align: center;
         font-size: 1.3rem;
         padding: 30px 30px 30px 30px;
         }
 }
-@media (max-width: 700px) {
-  
-        .section-c .section-c-container {
-        grid-template-columns: 1fr ;
-        justify-content: space-around;
-     
-        .logo-display {
-        width: 30%;
-       
-      }
-    }
- 
- }
+
 
