--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,4 +29,20 @@
   a {
     text-decoration: none;
   }
- 
+  .section-container{
+    max-width: 1200px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    justify-content: center;
+    padding: 20px 20px;
+    }
+
+    @media (max-width: 700px) {
+    
+     .section-container {
+      grid-template-columns: 1fr;
+      justify-content: space-around;
+      }
+   
+   }
