--- a/scss/_section-d.scss
+++ b/scss/_section-d.scss
@@ -2,13 +2,16 @@
     @include set-background(#fff);
     padding: 40px 20px;
 
+
+    //this h1-div created to make h1 have max-with 1200px
     .h1-div {
       max-width: 1200px;
       margin: auto;
     }
    
+    //this .section-container is customize style from global style scss
    .section-container {
-    gap: 20px;
+    gap: 40px;
     margin-top: 10px;
     margin-bottom: 20px;
     border: 1px dotted rgb(180, 178, 178);
@@ -16,3 +19,10 @@
    }
 }
 
+   //this @media is customize style from global style scss
+@media (max-width: 700px) {
+  .section-d .section-container {
+      gap: 0px;
+   }
+  
+  }
