--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@
 @import 'btn';
 
 
-// _style.scss
+// Global style scss
 * {
     box-sizing: border-box;
     margin: 0;
@@ -24,7 +24,7 @@
   }
   img{
     width: 100%;
-}
+  }
 
   a {
     text-decoration: none;
@@ -38,11 +38,13 @@
     padding: 20px 20px;
     }
 
-    @media (max-width: 700px) {
-    
-     .section-container {
-      grid-template-columns: 1fr;
-      justify-content: space-around;
-      }
+
+
+@media (max-width: 700px) {
+
+    .section-container {
+    grid-template-columns: 1fr;
+    justify-content: space-around;
+    }
    
    }
