--- a/scss/_section-c.scss
+++ b/scss/_section-c.scss
@@ -1,10 +1,11 @@
 
 .section-c {
     @include set-background($light-blue-color);
-
+  
   //this .section-container is customize style from global style scss
 .section-container{
         grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        padding: 80px 0 0 0;
         }
 
         .logo-display {
@@ -15,8 +16,24 @@
          p {
         text-align: center;
         font-size: 1.3rem;
-        padding: 30px 30px 30px 30px;
+        padding: 70px 30px 80px 30px;
         }
 }
+
+@media (max-width: 500px) {
+
+  .section-c .section-container {
+  grid-template-columns: 1fr;
+  justify-content: space-around;
+  padding: 30px 0 10px 0;
+  }
+  .section-c .logo-display{
+    width: 25%;
+  }
+  .section-c p{
+    padding: 10px 30px 20px 30px;
+  }
+ 
+ }
 
 
