--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@
 @import 'section-b';
 @import 'section-c';
 @import 'section-d';
+@import 'section-e';
 @import 'btn';
 
 
@@ -25,6 +26,9 @@
   img{
     width: 100%;
   }
+ li{
+    list-style-type: none;
+  }
 
   a {
     text-decoration: none;
@@ -37,6 +41,7 @@
     justify-content: center;
     padding: 20px 20px;
     }
+  
 
 
 
