--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,6 @@
 footer{
     @include set-background($dark-blue-color);
     text-align: center;
-    padding: 20px;
+    padding: 40px 20px;
     font-size: 13px;
 }
