--- a/scss/_section-a.scss
+++ b/scss/_section-a.scss
@@ -1,7 +1,7 @@
 
 .section-a {
 
-    padding-top: 40px;
+    margin-top: 40px;
     padding-bottom: 30px;
     @include set-background($light-color);
     
