--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,6 +23,7 @@
     @include set-background($light-color);
     font-family: $font-stack;
     line-height: 1.6;
+
   }
   img{
     width: 100%;
@@ -43,7 +44,16 @@
     padding: 20px 20px;
     }
   
-
+.main{
+  width: 100%;
+  height: 100%;
+  // overflow-y: scroll; 
+  // scroll-behavior: smooth;
+  // scroll-snap-type: y mandatory;
+}
+section {
+  scroll-snap-align: center;
+}
 
 
 @media (max-width: 700px) {
